--- a/E-commerce-website/frontend/src/index.css
+++ b/E-commerce-website/frontend/src/index.css
@@ -3,6 +3,9 @@
 
 
 a.active hr{
+  background-color: orange;
+  height: 2px;
+  border-radius: 5px;
   display: block;
 }
 
@@ -22,7 +25,7 @@ a.active hr{
 
 @media (max-width:640px) {
   a.active{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: white;
   }
 }
